Updated image save method for including comment in jpg -PNG still needs fixed, may reqire exiftool

--- a/gimp_be/settings/default_settings.json
+++ b/gimp_be/settings/default_settings.json
@@ -9,7 +9,7 @@
   },
   "path": {
     "default_save_path": "YOUR DEFAULT SAVE PATH",
-    "resource_folder": "YOUR RESOURCE FOLDER"
+    "art_folder": "YOUR RESOURCE FOLDER"
   },
   "network": {
     "host_name": "YOUR COMPUTER NAME"
