--- a/install/linux_settings.json
+++ b/install/linux_settings.json
@@ -1,1 +1,26 @@
-{"development": {"dev_mode": "False"}, "network": {"host_name": "Your Computer Name Here"}, "twitter": {"ACCESS_TOKEN_KEY": "YOUR ACCESS_TOKEN_KEY", "CONSUMER_KEY": "YOUR CONSUMER_KEY", "hashtags": "#GIMP #Python #digitalart #psychedelicArt #design #art #generativeArt #paint #color #trippy #creativecode #illustration  #generative", "default_tweet": "Created with #GIMP and #Python", "CONSUMER_SECRET": "YOUR CONSUMER_SECRET", "ACCESS_TOKEN_SECRET": "YOUR ACCESS_TOKEN_SECRET"}, "location": {"city": "Saint Joseph", "tempf": "64", "country": "USA", "longitude": "-94.8097", "state": "MO", "weather": "Overcast", "latitude": "39.7581"}, "path": {"art_folder": "/home/user/art/", "default_save_path": "/home/user/art/script_drawing/", "export_name": "/home/user/art/script_drawing/art-20170926124207-oQc.jpg", "export_file_name": "/home/user/art/script_drawing/art.png"}, "image": {"license": "Creative Commons Attribution-Noncommercial-Share Alike 3.0 License", "title": "histoplasmin monodelphic", "height": "1080", "width": "1920", "x_center": "960", "y_center": "540"}, "user": {"author": "Jared Haer"}}
+{ 
+ "network": {"host_name": "<HOSTNAME>"}, 
+ "twitter": {"ACCESS_TOKEN_KEY": 
+             "<ACCESS_TOKEN_KEY>", 
+             "CONSUMER_KEY": "<CONSUMER_KEY>", 
+             "hashtags": "#GIMP #Python #digitalart #art #paint #color", 
+             "default_tweet": "<DEFAULT_TWEET>", 
+             "CONSUMER_SECRET": "<CONSUMER_SECRET>", 
+             "ACCESS_TOKEN_SECRET": "<ACCESS_TOKEN_SECRET>"}, 
+ "location": {"city": "<CITY>", 
+              "tempf": "64", 
+              "country": "<COUNTRY>", 
+              "longitude": "<LONGITUDE>", 
+              "state": "<STATE>", 
+              "weather": "Overcast", 
+              "latitude": "<LATITUDE>"}, 
+ "path": {"art_folder": "<ART_FOLDER>", 
+          "default_save_path": "<DEFAULT_SAVE_PATH>", 
+          "export_name": "<EXPORT_NAME>", 
+          "export_file_name": "<EXPORT_FILE_NAME>"}, 
+ "image": {"title": "histoplasmin monodelphic", 
+           "height": "1080", 
+           "width": "1920"
+           "license": "<LICENSE>"}, 
+ "user": {"author": "<AUTHOR>"}
+}
