Update and rename linux_settings.json to template_settings.json

--- a/install/template_settings.json
+++ b/install/template_settings.json
@@ -8,12 +8,12 @@
              "CONSUMER_SECRET": "<CONSUMER_SECRET>", 
              "ACCESS_TOKEN_SECRET": "<ACCESS_TOKEN_SECRET>"}, 
  "location": {"city": "<CITY>", 
-              "tempf": "64", 
-              "country": "<COUNTRY>", 
-              "longitude": "<LONGITUDE>", 
               "state": "<STATE>", 
-              "weather": "Overcast", 
-              "latitude": "<LATITUDE>"}, 
+              "country": "<COUNTRY>", 
+              "latitude": "<LATITUDE>", 
+              "longitude": "<LONGITUDE>", 
+              "tempf": "64", 
+              "weather": "Overcast"}, 
  "path": {"art_folder": "<ART_FOLDER>", 
           "default_save_path": "<DEFAULT_SAVE_PATH>", 
           "export_name": "<EXPORT_NAME>", 
