--- a/install/template_settings.json
+++ b/install/template_settings.json
@@ -1,11 +1,10 @@
 { 
  "network": {"host_name": "<HOSTNAME>"}, 
- "twitter": {"ACCESS_TOKEN_KEY": 
-             "<ACCESS_TOKEN_KEY>", 
-             "CONSUMER_KEY": "<CONSUMER_KEY>", 
-             "hashtags": "#GIMP #Python #digitalart #art #paint #color", 
+ "twitter": {"hashtags": "#GIMP #Python #digitalart #art #paint #color", 
              "default_tweet": "<DEFAULT_TWEET>", 
+             "CONSUMER_KEY": "<CONSUMER_KEY>", 
              "CONSUMER_SECRET": "<CONSUMER_SECRET>", 
+             "ACCESS_TOKEN_KEY": "<ACCESS_TOKEN_KEY>", 
              "ACCESS_TOKEN_SECRET": "<ACCESS_TOKEN_SECRET>"}, 
  "location": {"city": "<CITY>", 
               "state": "<STATE>", 
@@ -14,10 +13,10 @@
               "longitude": "<LONGITUDE>", 
               "tempf": "64", 
               "weather": "Overcast"}, 
- "path": {"art_folder": "<ART_FOLDER>", 
-          "default_save_path": "<DEFAULT_SAVE_PATH>", 
+ "path": {"default_save_path": "<DEFAULT_SAVE_PATH>", 
           "export_name": "<EXPORT_NAME>", 
-          "export_file_name": "<EXPORT_FILE_NAME>"}, 
+          "export_file_name": "<EXPORT_FILE_NAME>",
+          "art_folder": "<ART_FOLDER>"}, 
  "image": {"title": "histoplasmin monodelphic", 
            "height": "1080", 
            "width": "1920",
