Updated config template

--- a/install/default_settings.ini
+++ b/install/default_settings.ini
@@ -1,38 +1,35 @@
+[user]
+author = <Author Name>
+
 [image]
-width = 1920
-height = 1080
-x_center = 960
-y_center = 540
+width = <Width>
+height = <Height>
 license = Creative Commons Attribution-Noncommercial-Share Alike 3.0 License
 title = miniseries murmurish
 export_mode = qXJ
 
 [location]
-city = Saint Jared
-country = USA
-latitude = 34.6817
-longitude = -91.9036
-state = OZ
+city = <City>
+country = <Country>
+latitude = 0.00
+longitude = -0.001
+state = <State>
 tempf = 42
 weather = Fair
 
 [network]
-host_name = <HOSTNAME>
+host_name = <Hostname>
 
 [path]
-art_folder = <ART_FOLDER>
-default_save_path = <DEFAULT_SAVE_PATH>
-export_file_name = <EXPORT_FILE_NAME>
-export_name = <EXPORT_NAME>
+art_folder = <Art Folder>
+default_save_path = <Default Save Path>
 
 [twitter]
-access_token_key = <ATK>
-access_token_secret = <ATS>
-consumer_key = <CK>
-consumer_secret = <CS>
-default_tweet = <DEFAULT_TWEET>
-hashtags = <HASHTAGS>
+access_token_key = <Twitter -Access Token Key>
+access_token_secret = <Twitter -Token Secret>
+consumer_key = <Twitter -Consumer Key>
+consumer_secret = <Twitter -Consumer Secret>
+default_tweet = <Default>
+hashtags = <Hashtags>
 
-[user]
-author = <AUTHOR>
 
